# botfw

./: .gitignore  Cargo.nix  Cargo.toml  Makefile.toml  bacon.toml  default_script.js  diesel.toml  flake.nix  mainbot.js  shell.nix
.gitea/workflows/: build.yaml  cd.yaml
migrations/: 2025-04-03-000002_change_user_id_to_bigint.up.sql
migrations/2025-04-02-141600_create_user/: up.sql
migrations/2025-04-02-154126_add_userid_to_users/: down.sql  up.sql
migrations/2025-04-02-163956_users_id_bigint/: down.sql  up.sql
migrations/2025-04-03-130758_message_literal_map/: up.sql
migrations/2025-04-03-134446_token_map/: down.sql  up.sql
migrations/2025-04-03-135748_litral_value_not_null/: down.sql  up.sql
migrations/2025-04-07-124248_extend_user_table/: down.sql  up.sql
migrations/2025-04-07-125633_non_optional_firstname/: down.sql  up.sql
migrations/2025-04-07-130716_event_table/: up.sql
migrations/2025-04-07-130908_reservation_table/: down.sql  up.sql
migrations/2025-04-07-135609_stringify_reservation_status/: down.sql  up.sql
migrations/2025-04-07-144225_fix_reservation_userid_bigint/: down.sql  up.sql
migrations/2025-04-07-144945_require_fields_reservation/: down.sql  up.sql
migrations/2025-04-07-153426_event_timestamptz/: down.sql  up.sql
migrations/2025-04-10-120721_media_table/: down.sql  up.sql
migrations/2025-04-18-100731_add_media_group_id/: down.sql  up.sql
migrations/2025-04-18-101829_optional_media_group_id/: down.sql  up.sql
src/: admin.rs  bot_handler.rs  bot_manager.rs  botscript.rs  commands.rs  db.rs  main.rs  message_answerer.rs  mongodb_storage.rs  utils.rs
src/botscript/: application.rs  db.rs  message_info.rs
src/config/: function.rs  mod.rs  result.rs  time.rs
src/config/dialog/: button.rs  keyboard.rs  message.rs  mod.rs
src/config/notification/: batch.rs  mod.rs
src/config/traits/: mod.rs  provider.rs  resolve_value.rs
src/db/: application.rs  bots.rs  callback_info.rs  message_forward.rs  mod.rs  models.rs  raw_calls.rs  schema.rs  tests.rs
src/db/tests/: callback_info_tests.rs  mod.rs
src/handlers/: admin.rs
src/runtimes/: mod.rs
src/runtimes/mlua/: mod.rs
src/runtimes/v8/: mod.rs  value_replace.rs
src/utils/: parcelable.rs
