[package]
name = "gongbotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10.3"
dotenvy = "0.15.7"
enum_stringify = "0.6.3"
envconfig = "0.11.0"
futures = "0.3.31"
git-const = "1.1.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.27"
mongodb = "3.2.3"
pretty_env_logger = "0.5.0"
quickjs-rusty = { git = "https://github.com/akulij/quickjs-rusty.git", rev = "549f830" }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
teloxide = { version = "0.14.0", features = ["macros", "postgres-storage-nativetls"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }

[lints.clippy]
print_stdout = "warn"
unwrap_used = "warn"
